...
                onClick = onOpenPrivacy,
                position = SettingsListItemPosition.BOTTOM
            )
        }
        updates()
        SettingsNavigationRow(
            modifier = Modifier.testTag("settings-about-entry"),
            title = stringResource(R.string.settings_about_title),
            description = stringResource(R.string.settings_about_desc),
            icon = Icons.Outlined.Info,
            onClick = onOpenAbout
        )
    }
...
